--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: fastmcp-server
     runtime: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: python src/server.py
+    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
+    startCommand: cd src && python server.py
     plan: free
     autoDeploy: false
     envVars:
